--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
       <p>This is a paragraph.</p>
       <h1>This is a heading</h1>
       <p>This is a paragraph.</p>
+      <h2>This is a heading</h2>
+      <p>This is a paragraph.</p>
+      <h2>This is a heading</h2>
+      <p>This is a paragraph.</p>
     </body>
     </html>
